--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 
   <!-- part 4 -->
   <link rel="stylesheet" href="css/scale.css">
+
+    <!-- part 5 -->
+  <link rel="stylesheet" href="css/boof.css">
+
 </head>
 
 
@@ -59,7 +63,7 @@
 </div>
 <br>
 
-<!-- part 2 -->
+<!-- part 4 -->
 <div style="font-family: 'Open Sans', sans-serif; font-size: 8px; font-weight: 50; margin-top: -20px;" class="part4">
   <section class="buttons">
   <div class="container">
@@ -86,12 +90,12 @@
   </div>
 </div>
 
-<!-- part 3 -->
-<div style="padding-left: 45%; margin-left: -7px;font-family: 'Open Sans', sans-serif; font-size: 6px; font-weight: 50;"  class="part2">
-  <a class="btn-draw" href="#"><span>Full Box Hover</span></a>
+<!-- part 2 -->
+<div style="padding-left: 45% !important; margin-left: -7px !important;font-family: 'Open Sans', sans-serif; font-size: 6px !important; font-weight: 50 !important;"  class="part2">
+  <a class="button-draw" href="#"><span>Full Box Hover</span></a>
 </div>
 
-<!-- part 4 -->
+<!-- part 3 -->
 <div class="part3">
     <div style="font-family: 'Open Sans', sans-serif; font-size: 10px; font-weight: 50;" class="container">
       <div class="button">Center > out</div>
@@ -107,8 +111,33 @@
     </div>
 </div>  
 
+<!-- part 5 -->
+<div style="font-family: 'Open Sans', sans-serif; font-size: 10px; font-weight: 50;" class="part5">
+  <div class="centerer">
+  <div style="text-align: center;" class="wrap">
+    <a class="btn-0" href="#">Swipe</a>
+    <a class="btn-1" href="#">Diagonal Swipe</a>
+    <a class="btn-1-2" href="#">Double Swipe</a>
+    <a class="btn-2" href="#">Diagonal Close</a>
+    <a class="btn-3" href="#"><span>Zoning In</span></a>
+    <a class="btn-4" href="#"><span>4 Corners</span></a>
+    <a class="btn-5" href="#">Slice</a>
+  </div>
+  <div style="text-align: center;" class="wrap">
+    <a class="btn-6" href="#">Position Aware<span></span></a>
+    <a class="btn-7" href="#"><span>Alternate</span></a>
+    <a class="btn-8" href="#">Smoosh</a>
+    <a class="btn-9" href="#"><span>Vertical Overlap</span></a>
+    <a class="btn-10" href="#"><span>Horizontal Overlap</span></a>
+    <a class="btn-11" href="#">Collision</a>
+  </div>
+</div>
+</div>
 
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://s.codepen.io/assets/libs/modernizr.js'></script>
 
+    <script  src="js/index.js"></script>
 
 
 </body>
